Cfn-aws/CloudFormation.yml
AWSTemplateFormatVersion: 2010-09-09

Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: VPC CIDR
        Parameters:
          - myVPCCidr
      - Label:
          default: InStance Type
        Parameters:
          - InstanceType
      - Label:
          default: SubNet Cider Details
        Parameters:
          - publicSubnetCidr1
          - publicSubnetCidr2
          - privateSubnetCidr1
          - privateSubnetCidr1
      - Label:
          default: SSH CIDR Details
        Parameters:
          - SecurityGroupIngressCIDR
  'AWS::CloudFormation::Designer':
    8f4fa8f7-22fa-4737-9271-8a9a1b5d7a65:
      size:
        width: 60
        height: 60
      position:
        x: -250
        'y': 380
      z: 1
      embeds: []
    0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c:
      size:
        width: 1120
        height: 630
      position:
        x: 60
        'y': 150
      z: 1
      embeds:
        - 1f241c5d-5ddf-4951-9571-9302fce90fd2
        - a89e28e6-16a8-4739-b805-8e7f0ac7dfb3
        - a180a9de-e96a-4358-ad21-70a0b778d77c
        - ffcf7b14-6f5f-4783-9ace-ea25bdfb0422
        - e0b99862-5254-4862-bbbb-4122e7cf7be4
        - 54e4df2d-0d42-4ace-82b1-1511b473c5a9
        - 36e7d79d-ff0e-4140-9bce-90ac54b86db5
        - 03702538-615f-4477-9f75-72d0748e93ea
        - 46a7b693-2e36-4306-9801-5897056521fe
        - f0be7ea5-cb8a-4ddc-8c32-5fa6f689c689
        - c73bcceb-2eb6-4024-ba82-a16fb617ebcd
    a180a9de-e96a-4358-ad21-70a0b778d77c:
      size:
        width: 60
        height: 60
      position:
        x: 90
        'y': 200
      z: 2
      parent: 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
      embeds: []
      iscontainedinside:
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
    ffcf7b14-6f5f-4783-9ace-ea25bdfb0422:
      size:
        width: 60
        height: 60
      position:
        x: 210
        'y': 200
      z: 2
      parent: 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
      embeds: []
      iscontainedinside:
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
    e0b99862-5254-4862-bbbb-4122e7cf7be4:
      size:
        width: 60
        height: 60
      position:
        x: 90
        'y': 320
      z: 2
      parent: 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
      embeds: []
      iscontainedinside:
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
    54e4df2d-0d42-4ace-82b1-1511b473c5a9:
      size:
        width: 60
        height: 60
      position:
        x: 210
        'y': 320
      z: 2
      parent: 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
      embeds: []
      iscontainedinside:
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
        - 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
    36e7d79d-ff0e-4140-9bce-90ac54b86db5:
      size:
        width: 140
        height: 170
      position:
        x: 100
        'y': 530
      z: 2
      parent: 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
      embeds:
        - d4e29ff4-c17d-41aa-9bf9-364620786622
    28fc72b4-40f5-49d4-8cd3-79f73aa76b0f:
      source:
        id: 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
      target:
        id: 8f4fa8f7-22fa-4737-9271-8a9a1b5d7a65
      z: 1
    d4e29ff4-c17d-41aa-9bf9-364620786622:
      size:
        width: 60
        height: 60
      position:
        x: 130
        'y': 590
      z: 3
      parent: 36e7d79d-ff0e-4140-9bce-90ac54b86db5
      embeds: []
      isassociatedwith:
        - 8f4fa8f7-22fa-4737-9271-8a9a1b5d7a65
      iscontainedinside:
        - 36e7d79d-ff0e-4140-9bce-90ac54b86db5
        - 36e7d79d-ff0e-4140-9bce-90ac54b86db5
        - 36e7d79d-ff0e-4140-9bce-90ac54b86db5
        - 36e7d79d-ff0e-4140-9bce-90ac54b86db5
        - 36e7d79d-ff0e-4140-9bce-90ac54b86db5
        - 36e7d79d-ff0e-4140-9bce-90ac54b86db5
      dependson:
        - 28fc72b4-40f5-49d4-8cd3-79f73aa76b0f
    03702538-615f-4477-9f75-72d0748e93ea:
      size:
        width: 180
        height: 200
      position:
        x: 350
        'y': 510
      z: 2
      parent: 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
      embeds:
        - 11a8c21c-6635-4076-8290-77e815988821
    11a8c21c-6635-4076-8290-77e815988821:
      size:
        width: 60
        height: 60
      position:
        x: 390
        'y': 600
      z: 3
      parent: 03702538-615f-4477-9f75-72d0748e93ea
      embeds: []
      iscontainedinside:
        - 03702538-615f-4477-9f75-72d0748e93ea
        - 03702538-615f-4477-9f75-72d0748e93ea
        - 03702538-615f-4477-9f75-72d0748e93ea
        - 03702538-615f-4477-9f75-72d0748e93ea
        - 03702538-615f-4477-9f75-72d0748e93ea
        - 03702538-615f-4477-9f75-72d0748e93ea
    46a7b693-2e36-4306-9801-5897056521fe:
      size:
        width: 140
        height: 190
      position:
        x: 390
        'y': 200
      z: 2
      parent: 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
      embeds:
        - 6ba8bb2e-0ce4-4b69-9972-620c0d927d0f
    6ba8bb2e-0ce4-4b69-9972-620c0d927d0f:
      size:
        width: 60
        height: 60
      position:
        x: 420
        'y': 260
      z: 3
      parent: 46a7b693-2e36-4306-9801-5897056521fe
      embeds: []
      iscontainedinside:
        - 46a7b693-2e36-4306-9801-5897056521fe
        - 46a7b693-2e36-4306-9801-5897056521fe
        - 46a7b693-2e36-4306-9801-5897056521fe
        - 46a7b693-2e36-4306-9801-5897056521fe
        - 46a7b693-2e36-4306-9801-5897056521fe
        - 46a7b693-2e36-4306-9801-5897056521fe
    f0be7ea5-cb8a-4ddc-8c32-5fa6f689c689:
      size:
        width: 140
        height: 200
      position:
        x: 580
        'y': 510
      z: 2
      parent: 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
      embeds:
        - 8b3c7a99-77be-4c37-89de-d06171cea03d
    8b3c7a99-77be-4c37-89de-d06171cea03d:
      size:
        width: 60
        height: 60
      position:
        x: 620
        'y': 580
      z: 3
      parent: f0be7ea5-cb8a-4ddc-8c32-5fa6f689c689
      embeds: []
      iscontainedinside:
        - f0be7ea5-cb8a-4ddc-8c32-5fa6f689c689
        - f0be7ea5-cb8a-4ddc-8c32-5fa6f689c689
        - f0be7ea5-cb8a-4ddc-8c32-5fa6f689c689
        - f0be7ea5-cb8a-4ddc-8c32-5fa6f689c689
        - f0be7ea5-cb8a-4ddc-8c32-5fa6f689c689
        - f0be7ea5-cb8a-4ddc-8c32-5fa6f689c689
    c73bcceb-2eb6-4024-ba82-a16fb617ebcd:
      size:
        width: 140
        height: 180
      position:
        x: 600
        'y': 210
      z: 2
      parent: 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
      embeds:
        - 3a108b7d-e941-41da-a46a-ddf60c5c4e26
    3a108b7d-e941-41da-a46a-ddf60c5c4e26:
      size:
        width: 60
        height: 60
      position:
        x: 670
        'y': 260
      z: 3
      parent: c73bcceb-2eb6-4024-ba82-a16fb617ebcd
      embeds: []
      iscontainedinside:
        - c73bcceb-2eb6-4024-ba82-a16fb617ebcd
        - c73bcceb-2eb6-4024-ba82-a16fb617ebcd
        - c73bcceb-2eb6-4024-ba82-a16fb617ebcd
        - c73bcceb-2eb6-4024-ba82-a16fb617ebcd
        - c73bcceb-2eb6-4024-ba82-a16fb617ebcd
        - c73bcceb-2eb6-4024-ba82-a16fb617ebcd
    a89e28e6-16a8-4739-b805-8e7f0ac7dfb3:
      size:
        width: 130
        height: 200
      position:
        x: 750
        'y': 510
      z: 2
      parent: 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
      embeds: []
    1f241c5d-5ddf-4951-9571-9302fce90fd2:
      size:
        width: 170
        height: 210
      position:
        x: 900
        'y': 510
      z: 2
      parent: 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c
      embeds: []


Parameters:
  SecurityGroupIngressCIDR:
    Description: Please select IP range can be used to communicate with EC2
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: IP Patter should be in valid format

  InstanceType:
    Description: Instance Type should be withing free version
    Type: String
    Default: t2.micro
    AllowedValues:
      - t1.micro
      - t2.micro
    ConstraintDescription: Instance Type should be withing free version

  KeyName:
    Description: Provide existing key name
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: Provide existing key name OR you can create one and re-upload the template

  myVPCCidr:
    Description: Define IP Address range for our VpcId
    Type: String
    Default: 10.100.0.0/16

  publicSubnetCidr1:
    Description: Define IP range for public Subnet
    Type: String
    Default: 10.100.1.0/24

  publicSubnetCidr2:
    Description: Define IP range for public Subnet
    Type: String
    Default: 10.100.2.0/24

  privateSubnetCidr1:
    Description: Define IP range for private Subnet
    Type: String
    Default: 10.100.10.0/24

  privateSubnetCidr2:
    Description: Define IP range for private Subnet
    Type: String
    Default: 10.100.11.0/24

  DBSubnetCidr1:
    Description: Define IP range for private Subnet
    Type: String
    Default: 10.100.20.0/24

  DBSubnetCidr2:
    Description: Define IP range for private Subnet
    Type: String
    Default: 10.100.21.0/24

  EnvironmentName:
    Description: Environment associated to Each reaource
    Type: String
    AllowedValues:
      - Test
      - Stage
      - Production
    ConstraintDescription: Please select Test OR Stage OR Prod Environment

  VpcName:
    Description: Enter your VPC Name
    Type: String

Mappings:
  RegionMap:
    us-east-1:
      HVM64: ami-0ff8a91507f77f867
    us-east-2:
      HVM64: ami-089a545a9ed9893b6
    eu-west-1:
      HVM64: ami-0ee415e1b8b71305f

Resources:
  myVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref myVPCCidr
      EnableDnsHostnames: true
      Tags:
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: Name
          Value: !Ref VpcName
        - Key: VpcId 
          Value: AWS::EC2::VPC::Id
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 0c9f1315-c0f6-4fbe-a4c9-05a6ca4b0c0c

  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: !Ref publicSubnetCidr1
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: Name
          Value: PublicSubnet1
    Metadata:
      'AWS::CloudFormation::Designer':
        id: c73bcceb-2eb6-4024-ba82-a16fb617ebcd

  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select [0, !GetAZs '']
      VpcId: !Ref myVPC
      CidrBlock: !Ref privateSubnetCidr1
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: Name
          Value: PrivateSubnet1
    Metadata:
      'AWS::CloudFormation::Designer':
        id: f0be7ea5-cb8a-4ddc-8c32-5fa6f689c689

  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: !Ref publicSubnetCidr2
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: Name
          Value: PublicSubnet2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 46a7b693-2e36-4306-9801-5897056521fe

  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref myVPC
      CidrBlock: !Ref privateSubnetCidr2
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: Name
          Value: PrivateSubnet2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 03702538-615f-4477-9f75-72d0748e93ea

  DBSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select [0, !GetAZs '']
      VpcId: !Ref myVPC
      CidrBlock: !Ref DBSubnetCidr1
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: Name
          Value: DBSubnet1
    Metadata:
      'AWS::CloudFormation::Designer':
        id: a89e28e6-16a8-4739-b805-8e7f0ac7dfb3

  DBSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select [1, !GetAZs '']
      VpcId: !Ref myVPC
      CidrBlock: !Ref DBSubnetCidr2
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Environment
          Value: !Ref EnvironmentName
        - Key: Name
          Value: DBSubnet2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 1f241c5d-5ddf-4951-9571-9302fce90fd2


  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName} Internet Gateway'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 8f4fa8f7-22fa-4737-9271-8a9a1b5d7a65

  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref myVPC
      InternetGatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 28fc72b4-40f5-49d4-8cd3-79f73aa76b0f

  PrivateEC2Instance1:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", HVM64]
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SubnetId: !Ref PrivateSubnet1
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 8b3c7a99-77be-4c37-89de-d06171cea03d

  EC2BastionHost:
    Type: 'AWS::EC2::Instance'
    DependsOn: AttachGateway
    Properties:
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", HVM64]
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      NetworkInterfaces:
      - AssociatePublicIpAddress: true
        DeleteOnTermination: true
        Description: ENI for bastion host
        DeviceIndex: '0'
        SubnetId: !Ref PublicSubnet1
        GroupSet: 
          - !Ref SSHSecurityGroup
      Tags:
      - Key: Name
        Value: !Sub 'Jumpbox bastion ${myVPC}'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 3a108b7d-e941-41da-a46a-ddf60c5c4e26

  WebServerPublicEC2Instance2:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", HVM64]
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SubnetId: !Ref PublicSubnet2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 6ba8bb2e-0ce4-4b69-9972-620c0d927d0f

  PrivateEC2Instance2:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", HVM64]
      InstanceType: !Ref InstanceType
      SubnetId: !Ref PrivateSubnet2
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 11a8c21c-6635-4076-8290-77e815988821

  DefaultPublicRoute1:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: d4e29ff4-c17d-41aa-9bf9-364620786622

  PublicRouteTable1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName} Public route'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 36e7d79d-ff0e-4140-9bce-90ac54b86db5

  PublicSubnetAssociationwithRouteTable1:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable1
      SubnetId: !Ref PublicSubnet1

  PublicSubnetAssociationwithRouteTable2:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable1
      SubnetId: !Ref PublicSubnet2


  AZNatGatewayEIPforPrivateSubnet:
    DependsOn: InternetGateway
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  AZNatGateway:
    DependsOn: AttachGateway
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref PublicSubnet1
      AllocationId: !GetAtt AZNatGatewayEIPforPrivateSubnet.AllocationId

  DefaultPrivateRoute1:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref AZNatGateway

  PrivateRouteTable1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName} Private route'

  DefaultPrivateRoute2:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref AZNatGateway

  PrivateRouteTable2:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref myVPC
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName} Private route'

  PrivateSubnet1RoutTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnet2RoutTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  DBSubnet1RoutTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref DBSubnet1

  DBSubnet2RoutTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref DBSubnet2


  ALBSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: ALB_Security
      GroupDescription: This Group will allow traffic from Internet
    Metadata:
      'AWS::CloudFormation::Designer':
        id: ffcf7b14-6f5f-4783-9ace-ea25bdfb0422

  SSHSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: SSH Security Group
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SecurityGroupIngressCIDR
      Tags:
        - Key: Name
          Value: SSH_Security
    Metadata:
      'AWS::CloudFormation::Designer':
        id: a180a9de-e96a-4358-ad21-70a0b778d77c

  WebServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref ALBSecurityGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref SSHSecurityGroup
      Tags:
        - Key: Name
          Value: WebSever_Security
      GroupDescription: >-
        This Group will accept traffic only from SSH and Load balancer Security
        groups allow
    Metadata:
      'AWS::CloudFormation::Designer':
        id: e0b99862-5254-4862-bbbb-4122e7cf7be4

  DBSSHSecurityStack:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: https://devops-nested-stack-bucket.s3.amazonaws.com/DB-Security+Group+V0.1.yml
      Parameters:
        ApplicationName: !Ref AWS::StackName
        VPCId: !Ref myVPC
      TimeoutInMinutes: 10

Outputs:
  PublicIp:
    Description: EC2 Instance Public Ip
    Value: !GetAtt EC2BastionHost.PublicIp
  VPC:
    Description: VPC ID
    Export:
      Name: !Sub '${AWS::StackName}-VPCID'
    Value: !Ref myVPC
  PrivateSubnet1:
    Description: PrivateSubnet1 ID
    Export:
      Name: !Sub '${AWS::StackName}-PrivateSubnetID1'
    Value: !Ref PrivateSubnet1
  PrivateSubnet2:
    Description: PrivateSubnet2 ID
    Export:
      Name: !Sub '${AWS::StackName}-PrivateSubnetID2'
    Value: !Ref PrivateSubnet2
  PublicSubnet1:
    Description: PublicSubnet1 ID
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnetID1'
    Value: !Ref PublicSubnet1
  PublicSubnet2:
    Description: PublicSubnet2 ID
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnetID2'
    Value: !Ref PublicSubnet2

  DBSecurtityGroupId:
    Description: Security Group id Created for DB 
    Value: !GetAtt DBSSHSecurityStack.Outputs.SSHGroupId


 # DBSecurityGroup:
  #   Type: 'AWS::EC2::SecurityGroup'
  #   Properties:
  #     VpcId: !Ref myVPC
  #     SecurityGroupIngress:
  #       - IpProtocol: tcp
  #         FromPort: 3306
  #         ToPort: 3306
  #         SourceSecurityGroupId: !Ref WebServerSecurityGroup
  #     Tags:
  #       - Key: Name
  #         Value: DB_Security Group
  #     GroupDescription: This Gorup will only accept traffic from Web Server Security group
  #   Metadata:
  #     'AWS::CloudFormation::Designer':
  #       id: 54e4df2d-0d42-4ace-82b1-1511b473c5a9
